<resources>
    <string name="app_name">EcommerceProject</string>
    <string name="explore_string">Explore</string>
    <string name="onsale_string">On Sale</string>
    <string name="cart_string">Cart</string>
    <string name="settings_string">Settings</string>
    <string name="logout_string">Logout</string>
    <string name="close_drawer">Navigation View</string>
    <string name="open_drawer">Navigation View Closed</string>
    <string name="search_title">Search Menu</string>
    <string name="search_hint">Product Name ...</string>
    <string name="title_activity_test">test</string>
</resources>
