<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/explore"
            android:checked="false"
            android:icon="@drawable/ic_explore"
            android:title="@string/explore_string" />

        <item
            android:id="@+id/onsale"
            android:checked="false"
            android:icon="@drawable/ic_heart"
            android:title="@string/onsale_string" />

        <item
            android:id="@+id/cart"
            android:checked="false"
            android:icon="@drawable/ic_cart"
            android:title="@string/cart_string" />

        <item
            android:id="@+id/settings"
            android:checked="false"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings_string" />

        <item
            android:id="@+id/logout"
            android:checked="false"
            android:icon="@drawable/ic_logout"
            android:title="@string/logout_string" />

    </group>
</menu>